--- a/tp1style.css
+++ b/tp1style.css
@@ -1,3 +1,18 @@
 body{
     background-color: lightgray;
 }
+div{
+	background-color: gray;
+}
+a:link{
+    color: blue;
+}
+a:visited{
+    color: blueviolet;
+}
+a:hover{
+    color: greenyellow;
+}
+a:active{
+    color: crimson;
+}
