cambio de color en el span de contacto y en el estilo de los links. Nuevo estilo para el header y section top

--- a/tp1style.css
+++ b/tp1style.css
@@ -4,14 +4,26 @@ body{
 div{
 	background-color: gray;
 }
+#header{
+    align-items: center;
+    text-align: center;
+}
+#section-top{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+#education, #work-experience{
+    width: 50%;
+}
 a:link{
     color: blue;
 }
 a:visited{
-    color: blueviolet;
+    color: rgb(64, 192, 89);
 }
 a:hover{
-    color: greenyellow;
+    color: rgb(252, 252, 252);
 }
 a:active{
     color: crimson;
