--- a/tp1style.css
+++ b/tp1style.css
@@ -16,6 +16,17 @@ div{
 #education, #work-experience{
     width: 50%;
 }
+#section-bottom{
+    width: 100%;
+    display:flex;
+    margin-top: 5px;
+}
+#skills, #languages, #other-skills{
+    width: calc(100%/3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 a:link{
     color: blue;
 }
